* Changes to Schema so that when creating, it always requires a moa_header * helper functions to create a moa header and add instances to the moa stream * NumpyStream uses these helpers * Initial version of PytorchStream  * Needs Pytorch installed in the system  * environment.yml does not contain this requirement

--- a/notebooks/03_using_sklearn_pytorch.ipynb
+++ b/notebooks/03_using_sklearn_pytorch.ipynb
@@ -416,10 +416,7 @@
    "cell_type": "markdown",
    "id": "9b6d4a63467b23b5",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Set random seeds"
@@ -440,9 +437,6 @@
      "iopub.status.busy": "2024-02-29T01:28:57.412750Z",
      "iopub.status.idle": "2024-02-29T01:28:57.422693Z",
      "shell.execute_reply": "2024-02-29T01:28:57.420178Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -457,10 +451,7 @@
    "cell_type": "markdown",
    "id": "ccbccfce41f2f18",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Define network structure"
@@ -531,10 +522,7 @@
    "cell_type": "markdown",
    "id": "882b6b292a2de100",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Using instance loop"
@@ -753,10 +741,7 @@
    "cell_type": "markdown",
    "id": "2c01f8aea1b78936",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### 2.1.1 Example using PyTorchClassifier + the instance loop"
@@ -820,10 +805,7 @@
    "cell_type": "markdown",
    "id": "75ee1eb154c01996",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### 2.1.2 Example using PyTorchClassifier and prequential_evaluation"
@@ -942,10 +924,7 @@
    "cell_type": "markdown",
    "id": "eaf035bef41c2ed2",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Create a SummaryWriter instance."
@@ -978,10 +957,7 @@
    "cell_type": "markdown",
    "id": "e5f87ce2a3293c34",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Example using PyTorchClassifier + the instance loop + TensorBoard"
@@ -1002,9 +978,6 @@
      "iopub.status.busy": "2024-02-29T01:30:16.471522Z",
      "iopub.status.idle": "2024-02-29T01:30:18.249158Z",
      "shell.execute_reply": "2024-02-29T01:30:18.248697Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -1097,6 +1070,57 @@
     "You can use it to also track training speed, learning rate, and other \n",
     "scalar values."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 2.3 How to use pytorch dataset with a CapyMOA classifier"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a3a752afb7e7698d"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from capymoa.evaluation import ClassificationEvaluator\n",
+    "from capymoa.learner.classifier.classifiers import OnlineBagging\n",
+    "from capymoa.stream import PytorchStream\n",
+    "\n",
+    "from torchvision import datasets\n",
+    "from torchvision.transforms import ToTensor\n",
+    "\n",
+    "pytorchDtaset = datasets.FashionMNIST(\n",
+    "            root=\"data\",\n",
+    "            train=True,\n",
+    "            download=True,\n",
+    "            transform=ToTensor()\n",
+    "        )\n",
+    "pytorchc_stream = PytorchStream(dataset=pytorchDtaset)\n",
+    "\n",
+    "# Creating a learner\n",
+    "ob_learner = OnlineBagging(schema=pytorchc_stream.get_schema(), ensemble_size=5)\n",
+    "\n",
+    "# Creating the evaluator\n",
+    "ob_evaluator = ClassificationEvaluator(schema=pytorchc_stream.get_schema())\n",
+    "\n",
+    "i = 0\n",
+    "while pytorchc_stream.has_more_instances() and i < 1000:\n",
+    "    instance = pytorchc_stream.next_instance()\n",
+    "    \n",
+    "    prediction = ob_learner.predict(instance)\n",
+    "    ob_evaluator.update(instance.y_label, prediction)\n",
+    "    ob_learner.train(instance)\n",
+    "    i += 1 \n",
+    "\n",
+    "ob_evaluator.accuracy()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ef4a60c0fc5b0894"
   },
   {
    "attachments": {},
@@ -1212,7 +1236,7 @@
    ],
    "source": [
     "# shows the creation string, the __class__ is needed as a parameter to the function is the class used. \n",
-    "elec_stream.moa_stream.getCLICreationString(elec_stream.moa_stream.__class__)"
+    "elec_stream.CLI"
    ]
   },
   {
