--- a/notebooks/Data_Reading.ipynb
+++ b/notebooks/Data_Reading.ipynb
@@ -11,7 +11,7 @@
     "  \n",
     "* Key functions and classes involved. \n",
     "  * ```ARFFStream(path=...)```: Class that inherits from ```Stream```\n",
-    "  * ```numpy_to_ARFF(X, y, ...)```: Function that receives numpy ```X``` and ```y``` and returns an ```Instances``` (MOA) and ```Header``` \n",
+    "  * ```numpy_to_ARFF(X, y, ...)```: Function that receives numpy ```X``` and ```y``` and returns an ```Instances``` (MOA) ```Header``` and available_class_labels (Python list) \n",
     "  * ```NumpyStream(X, y, ...)```: Class that returns a ```Stream``` compatible object given a numpy ```X``` and ```y```\n",
     "  * ```stream_from_file(path_to_csv_or_arff=...)```: Function that returns a ```Stream```\n",
     " \n",
@@ -29,24 +29,22 @@
      "iopub.status.idle": "2024-02-29T01:29:15.794954Z",
      "shell.execute_reply": "2024-02-29T01:29:15.794466Z"
     },
-    "scrolled": true
+    "scrolled": true,
+    "ExecuteTime": {
+     "end_time": "2024-03-02T09:03:36.162216Z",
+     "start_time": "2024-03-02T09:03:31.392698Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa\n",
-      "MOA jar path location (config.ini): /home/antonlee/github.com/tachyonicClock/MOABridge/src/capymoa/jar/moa.jar\n",
+      "capymoa_root: /Users/ng98/Desktop/CODE/CapyMOA/src/capymoa\n",
+      "MOA jar path location (config.ini): /Users/ng98/Desktop/CODE/CapyMOA/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
-      "JAVA_HOME: /usr/lib/jvm/java-17-openjdk\n",
-      "JVM args: ['-Xmx8g', '-Xss10M']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "JAVA_HOME: /Users/ng98/Library/Java/JavaVirtualMachines/openjdk-14.0.1/Contents/Home\n",
+      "JVM args: ['-Xmx8g', '-Xss10M']\n",
       "Sucessfully started the JVM and added MOA jar to the class path\n"
      ]
     }
@@ -1057,9 +1055,10 @@
    "source": [
     "## Testing the ```numpy_to_ARFF()``` function\n",
     "* ```numpy_to_ARFF(...)``` should **not be used directly**, it is easier to just create a ```NumpyStream``` object.\n",
-    "* This function returns MOA (Java) objects (InstancesHeader and Instances)\n",
+    "* This function returns MOA (Java) objects (InstancesHeader, Instances ) and class_labels\n",
     "  * ```<java class 'com.yahoo.labs.samoa.instances.InstancesHeader'>```\n",
-    "  * ```<java class 'com.yahoo.labs.samoa.instances.Instances'>```"
+    "  * ```<java class 'com.yahoo.labs.samoa.instances.Instances'>```\n",
+    "  * ```  class_labels python list```"
    ]
   },
   {
@@ -1132,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "310ccc63-c65a-4b35-a9d6-a71030945b3d",
    "metadata": {
     "execution": {
@@ -1140,6 +1139,10 @@
      "iopub.status.busy": "2024-02-29T01:29:23.687641Z",
      "iopub.status.idle": "2024-02-29T01:29:23.737271Z",
      "shell.execute_reply": "2024-02-29T01:29:23.736793Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-03-02T09:03:49.062413Z",
+     "start_time": "2024-03-02T09:03:46.769269Z"
     }
    },
    "outputs": [
@@ -1617,7 +1620,7 @@
     "y = data.target  # Target (diabetes progression)\n",
     "\n",
     "# print(data.DESCR)\n",
-    "arff_instances_data, arff_instances_header = numpy_to_ARFF(X, y, \"Diabetes\", data.feature_names)\n",
+    "arff_instances_data, arff_instances_header, class_labels = numpy_to_ARFF(X, y, \"Diabetes\", data.feature_names)\n",
     "\n",
     "print(arff_instances_data)"
    ]
@@ -1669,8 +1672,7 @@
       "@attribute transfer numeric\n",
       "@attribute class {0,1}\n",
       "\n",
-      "@data\n",
-      "\n"
+      "@data\n"
      ]
     }
    ],
@@ -1690,7 +1692,7 @@
     "print(\"y shape:\", y.shape)\n",
     "print(header)\n",
     "\n",
-    "arff_data, arff_header = numpy_to_ARFF(X, y.astype(int), \"Elec\", header[:-1], header[-1])\n",
+    "arff_data, arff_header, class_labels = numpy_to_ARFF(X, y.astype(int), \"Elec\", header[:-1], header[-1])\n",
     "\n",
     "# schema=Schema(moa_header=arff_data.getHeader())\n",
     "print(arff_header)"
