* Not exposing   * init_moa_stream_and_create_moa_header()   * add_instances_to_moa_stream()   * numpy_to_ARFF() to the user.
* Add get_schema() static method to get a Schema from a passed in information

--- a/notebooks/Classification_Evaluator_Examples.ipynb
+++ b/notebooks/Classification_Evaluator_Examples.ipynb
@@ -25,8 +25,8 @@
      "shell.execute_reply": "2024-02-29T01:28:19.967035Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-03-02T08:11:18.652923Z",
-     "start_time": "2024-03-02T08:11:13.926481Z"
+     "end_time": "2024-03-15T00:11:06.795440Z",
+     "start_time": "2024-03-15T00:11:01.337557Z"
     }
    },
    "outputs": [
@@ -34,8 +34,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "capymoa_root: /Users/ng98/Desktop/CODE/CapyMOA/src/capymoa\n",
-      "MOA jar path location (config.ini): /Users/ng98/Desktop/CODE/CapyMOA/src/capymoa/jar/moa.jar\n",
+      "capymoa_root: /Users/ng98/Desktop/CODE/NuwanCapyMOA/src/capymoa\n",
+      "MOA jar path location (config.ini): /Users/ng98/Desktop/CODE/NuwanCapyMOA/src/capymoa/jar/moa.jar\n",
       "JVM Location (system): \n",
       "JAVA_HOME: /Users/ng98/Library/Java/JavaVirtualMachines/openjdk-14.0.1/Contents/Home\n",
       "JVM args: ['-Xmx8g', '-Xss10M']\n",
@@ -72,8 +72,8 @@
      "shell.execute_reply": "2024-02-29T01:28:19.987481Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-03-02T08:11:18.667520Z",
-     "start_time": "2024-03-02T08:11:18.658460Z"
+     "end_time": "2024-03-15T00:11:06.810114Z",
+     "start_time": "2024-03-15T00:11:06.799318Z"
     }
    },
    "outputs": [
@@ -115,8 +115,8 @@
      "shell.execute_reply": "2024-02-29T01:28:20.021371Z"
     },
     "ExecuteTime": {
-     "end_time": "2024-03-02T08:11:18.702263Z",
-     "start_time": "2024-03-02T08:11:18.669789Z"
+     "end_time": "2024-03-15T00:11:11.082457Z",
+     "start_time": "2024-03-15T00:11:11.061108Z"
     }
    },
    "outputs": [
@@ -134,10 +134,9 @@
     }
    ],
    "source": [
-    "from capymoa.stream import init_moa_stream_and_create_moa_header\n",
     "values_for_class_label = [0,1]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema)\n",
     "\n",
     "evaluator.update(1, 0)\n",
@@ -192,8 +191,8 @@
    ],
    "source": [
     "values_for_class_label = [0,1,2]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, precision_per_class=True)\n",
     "\n",
     "evaluator.update(0, 2)\n",
@@ -246,8 +245,8 @@
    ],
    "source": [
     "values_for_class_label = [\"zero\",\"one\",\"two\"]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, recall_per_class=True)\n",
     "\n",
     "evaluator.update(\"one\", \"one\")\n",
@@ -274,34 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6ea3c19f-4ef8-4289-9af0-9949936c1f77",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T01:28:20.066399Z",
-     "iopub.status.busy": "2024-02-29T01:28:20.066131Z",
-     "iopub.status.idle": "2024-02-29T01:28:20.090515Z",
-     "shell.execute_reply": "2024-02-29T01:28:20.086079Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2024-03-02T08:11:18.764111Z",
-     "start_time": "2024-03-02T08:11:18.747435Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'F1 Score (percent)', 'F1 Score for class 0 (percent)', 'F1 Score for class 1 (percent)', 'F1 Score for class 2 (percent)', 'Precision (percent)', 'Precision for class 0 (percent)', 'Precision for class 1 (percent)', 'Precision for class 2 (percent)', 'Recall (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
-      "[4.0, 75.0, 63.63636363636363, 75.0, 0.0, 83.33333333333334, 66.66666666666666, 100.0, 66.66666666666666, 83.33333333333334, 50.0, 100.0, 100.0, 83.33333333333334, 100.0, 100.0, 50.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "values_for_class_label = [\"banana\",\"apple\",\"plane\"]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, f1_per_class=True)\n",
     "\n",
     "evaluator.update(\"plane\", \"banana\")\n",
@@ -312,7 +288,11 @@
     "print(evaluator.metrics_header())\n",
     "\n",
     "print(evaluator.metrics())"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a37da527c04f62a3"
   },
   {
    "attachments": {},
@@ -328,20 +308,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "dcd3a902-6271-463d-a4fc-04f04bb1a723",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T01:28:20.140459Z",
-     "iopub.status.busy": "2024-02-29T01:28:20.140227Z",
-     "iopub.status.idle": "2024-02-29T01:28:20.153963Z",
-     "shell.execute_reply": "2024-02-29T01:28:20.153324Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2024-03-02T08:11:18.779815Z",
-     "start_time": "2024-03-02T08:11:18.765988Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -354,9 +320,9 @@
    ],
    "source": [
     "values_for_class_label = [\"banana\",\"apple\",\"plane\"]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
-    "evaluator = ClassificationEvaluator(schema=schema, f1_precision_recall=True)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
+    "evaluator = ClassificationEvaluator(schema=schema, f1_per_class=True)\n",
     "\n",
     "# Old version, this used to work\n",
     "# evaluator.update(2, 0)\n",
@@ -373,7 +339,21 @@
     "print(evaluator.metrics_header())\n",
     "\n",
     "print(evaluator.metrics())"
-   ]
+   ],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:20.066399Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.066131Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.090515Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.086079Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-03-02T08:11:18.764111Z",
+     "start_time": "2024-03-02T08:11:18.747435Z"
+    }
+   },
+   "id": "6ea3c19f-4ef8-4289-9af0-9949936c1f77",
+   "execution_count": 6
   },
   {
    "attachments": {},
@@ -414,8 +394,8 @@
    ],
    "source": [
     "values_for_class_label = [5,3,1]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, f1_precision_recall=True)\n",
     "\n",
     "evaluator.update(5, 1)\n",
@@ -447,36 +427,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c24c1547-371a-47d3-adbd-f873bd4e461e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T01:28:20.179966Z",
-     "iopub.status.busy": "2024-02-29T01:28:20.179737Z",
-     "iopub.status.idle": "2024-02-29T01:28:20.190377Z",
-     "shell.execute_reply": "2024-02-29T01:28:20.189868Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2024-03-02T08:11:18.810886Z",
-     "start_time": "2024-03-02T08:11:18.797231Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['classified instances', 'classifications correct (percent)', 'Kappa Statistic (percent)', 'Kappa Temporal Statistic (percent)', 'Kappa M Statistic (percent)', 'F1 Score (percent)', 'F1 Score for class 0 (percent)', 'F1 Score for class 1 (percent)', 'F1 Score for class 2 (percent)', 'Precision (percent)', 'Precision for class 0 (percent)', 'Precision for class 1 (percent)', 'Precision for class 2 (percent)', 'Recall (percent)', 'Recall for class 0 (percent)', 'Recall for class 1 (percent)', 'Recall for class 2 (percent)']\n",
-      "[4.0, 75.0, 60.0, 50.0, 50.0, nan, 100.0, nan, 66.66666666666666, nan, 100.0, nan, 50.0, 66.66666666666666, 100.0, 0.0, 100.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The label values are 5, 3 and 1. What happens if we use integers that do not \n",
     "# belong to the label list values but can be interpreted as valid indexes? It works, but it is confusing... \n",
     "values_for_class_label = [5,3,1]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, f1_precision_recall=True)\n",
     "\n",
     "evaluator.update(5, 0)\n",
@@ -487,7 +444,11 @@
     "print(evaluator.metrics_header())\n",
     "\n",
     "print(evaluator.metrics())"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f92d798a1e5373e4"
   },
   {
    "attachments": {},
@@ -551,20 +512,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0b1b7972-5175-40a3-97bc-edd29aeabe8d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-02-29T01:28:20.222968Z",
-     "iopub.status.busy": "2024-02-29T01:28:20.215969Z",
-     "iopub.status.idle": "2024-02-29T01:28:20.247016Z",
-     "shell.execute_reply": "2024-02-29T01:28:20.246476Z"
-    },
-    "ExecuteTime": {
-     "end_time": "2024-03-02T08:11:18.846721Z",
-     "start_time": "2024-03-02T08:11:18.830960Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -578,8 +525,8 @@
    ],
    "source": [
     "values_for_class_label = [0,1,2]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationEvaluator(schema=schema, recall_per_class=True)\n",
     "\n",
     "evaluator.update(0, None)\n",
@@ -596,18 +543,33 @@
     "print(evaluator.metrics_header())\n",
     "print(evaluator.metrics())\n",
     "print(evaluator.accuracy())"
-   ]
+   ],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-02-29T01:28:20.222968Z",
+     "iopub.status.busy": "2024-02-29T01:28:20.215969Z",
+     "iopub.status.idle": "2024-02-29T01:28:20.247016Z",
+     "shell.execute_reply": "2024-02-29T01:28:20.246476Z"
+    },
+    "ExecuteTime": {
+     "end_time": "2024-03-02T08:11:18.846721Z",
+     "start_time": "2024-03-02T08:11:18.830960Z"
+    }
+   },
+   "id": "0b1b7972-5175-40a3-97bc-edd29aeabe8d",
+   "execution_count": 11
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "7ef8d1fb-1be8-49da-a80f-765d4785320a",
-   "metadata": {},
    "source": [
     "## Test ClassificationEvaluator 10\n",
     "\n",
     "* Using the ClassificationWindowedEvaluator"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f8b58c77d358f5aa"
   },
   {
    "cell_type": "code",
@@ -646,8 +608,8 @@
    ],
    "source": [
     "values_for_class_label = [0,1]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationWindowedEvaluator(schema=schema, window_size=3)\n",
     "\n",
     "evaluator.update(1, 0)\n",
@@ -721,8 +683,8 @@
    ],
    "source": [
     "values_for_class_label = [0,1]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "evaluator = ClassificationWindowedEvaluator(schema=schema, window_size=5)\n",
     "\n",
     "evaluator.update(1, 0)\n",
@@ -1006,9 +968,8 @@
     "\n",
     "# Setting the class labels as floats since river only deals with floats. \n",
     "values_for_class_label = [1.0, 2.0, 3.0, 4.0, 5.0]\n",
-    "_, moa_header = init_moa_stream_and_create_moa_header(feature_names=['f1','f2'], values_for_class_label=values_for_class_label)\n",
-    "schema = Schema(moa_header=moa_header, labels=values_for_class_label)\n",
-    "# schema = Schema(moa_header=rtg.getHeader())\n",
+    "feature_names=['f1','f2']\n",
+    "schema = Schema.get_schema(feature_names, values_for_class_label=values_for_class_label)\n",
     "# Setting parameters using the option attribute directly\n",
     "evaluator = ClassificationEvaluator(schema=schema, recall_per_class=True)\n",
     "\n",
