Re-run the notebook to fix execution_count issue.

--- a/notebooks/03_using_sklearn_pytorch.ipynb
+++ b/notebooks/03_using_sklearn_pytorch.ipynb
@@ -404,13 +404,10 @@
    "cell_type": "markdown",
    "id": "9b6d4a63467b23b5",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
-    "#### Set random seeds"
+    "### Set random seeds"
    ]
   },
   {
@@ -428,9 +425,6 @@
      "iopub.status.busy": "2024-02-29T01:28:57.412750Z",
      "iopub.status.idle": "2024-02-29T01:28:57.422693Z",
      "shell.execute_reply": "2024-02-29T01:28:57.420178Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -445,13 +439,10 @@
    "cell_type": "markdown",
    "id": "ccbccfce41f2f18",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
-    "#### Define network structure"
+    "### Define network structure"
    ]
   },
   {
@@ -519,13 +510,10 @@
    "cell_type": "markdown",
    "id": "882b6b292a2de100",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
-    "#### Using instance loop"
+    "### Using instance loop"
    ]
   },
   {
@@ -717,10 +705,7 @@
    "cell_type": "markdown",
    "id": "2c01f8aea1b78936",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### 2.1.1 Example using PyTorchClassifier + the instance loop"
@@ -784,10 +769,7 @@
    "cell_type": "markdown",
    "id": "75ee1eb154c01996",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### 2.1.2 Example using PyTorchClassifier and prequential_evaluation"
@@ -906,10 +888,7 @@
    "cell_type": "markdown",
    "id": "eaf035bef41c2ed2",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Create a SummaryWriter instance."
@@ -942,10 +921,7 @@
    "cell_type": "markdown",
    "id": "e5f87ce2a3293c34",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "#### Example using PyTorchClassifier + the instance loop + TensorBoard"
@@ -966,9 +942,6 @@
      "iopub.status.busy": "2024-02-29T01:30:16.471522Z",
      "iopub.status.idle": "2024-02-29T01:30:18.249158Z",
      "shell.execute_reply": "2024-02-29T01:30:18.248697Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -1066,10 +1039,7 @@
    "cell_type": "markdown",
    "id": "a3a752afb7e7698d",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "source": [
     "### 2.3 How to use pytorch dataset with a CapyMOA classifier"
@@ -1084,10 +1054,7 @@
      "end_time": "2024-03-16T07:04:22.924433Z",
      "start_time": "2024-03-16T07:04:08.391643Z"
     },
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [
     {
